<?xml version="1.0"?>
<package format="3">
  <name>op3_gazebo</name>
  <version>0.1.1</version>
  <description>
    The op3_gazebo package
  </description>
  <license>Apache 2.0</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/op3_description</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/op3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Common</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Common/issues</url>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
